--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
     <div class="col-12">
       <div class="mobile-header-elements">
         <div class="mobile-logo">
-          <a href="index1.html"
+          <a href="index.html"
             ><img src="assets/img/logo/Logo.png" alt=""
           /></a>
         </div>
@@ -215,7 +215,7 @@
         <div class="pera">
           <a href="tel:+31247810024">+31 247 810 024 (NL)</a> 
           <br />
-          <a href="tel:+84867188170">+84 867 188 170 (VN) </a>
+          <a href="tel:+84816832325">+84 816 832 325 (VN) </a>
         </div>
       </div>
 
@@ -681,7 +681,7 @@
                         <div class="pera">
                           <a target="_blank" href="https://www.google.com/maps/place/17+%C4%90.+S%E1%BB%91+19,+An+Ph%C3%BA,+Th%E1%BB%A7+%C4%90%E1%BB%A9c,+H%E1%BB%93+Ch%C3%AD+Minh/@10.7952228,106.7385587,14.54z/data=!4m6!3m5!1s0x3175260dfea09785:0x6bfa258fbd42506e!8m2!3d10.7974054!4d106.7414569!16s%2Fg%2F11fz95vc3b?entry=ttu&g_ep=EgoyMDI1MDQxNC4xIKXMDSoASAFQAw%3D%3D"
                             >Globalhire Group VN<br />
-                            số 17,Đường Số 19 Phường An Phú<br/> Quận 2, 700000 Hồ Chí Minh <br/>
+                            số 17,Đường Số 19 Phường An Phú<br/> Quận 2, TP. Hồ Chí Minh, Vietnam <br/>
                             Vietnam
                           </a>
                         </div>
@@ -691,7 +691,7 @@
                           <img src="assets/img/icons/footer-icon1.png" alt="" />
                         </div>
                         <div class="pera">
-                          <a href="tel:+84867188170">+84 867 188 170 </a>
+                          <a href="tel:+84816832325">+84 816 832 325 </a>
                         </div>
                       </div>
                     </div>
