--- a/job-details.html
+++ b/job-details.html
@@ -190,7 +190,7 @@
         <div class="col-12">
           <div class="mobile-header-elements">
             <div class="mobile-logo">
-              <a href="index1.html"
+              <a href="index.html"
                 ><img src="assets/img/logo/Logo.png" alt=""
               /></a>
             </div>
@@ -262,7 +262,7 @@
             <div class="pera">
               <a href="tel:+31247810024">+31 247 810 024 (NL)</a> 
               <br />
-              <a href="tel:+84867188170">+84 867 188 170 (VN) </a>
+              <a href="tel:+84816832325">+84 816 832 325 (VN) </a>
             </div>
           </div>
     
@@ -804,17 +804,6 @@
           <div class="col-lg-4 col-md-6 col-12">
             <div class="single-footer-items">
               <h3 lang="lang-footer-contact">Contact Us</h3>
-
-              <div class="contact-box">
-                <div class="icon">
-                  <img src="assets/img/icons/footer-icon1.png" alt="" />
-                </div>
-                <div class="pera">
-                  <a href="tel:+31247810024">+31 247 810 024 (NL) </a>
-                  <a href="tel:+84867188170">+84 867 188 170 (VN) </a>
-                </div>
-              </div>
-
               <div class="contact-box">
                 <div class="icon">
                   <img src="assets/img/icons/footer-icon2.png" alt="" />
@@ -836,12 +825,34 @@
                     <br />
                     Heyendaalseweg 203 <br /> 6525 SE Nijmegen<br/> Nederland</a
                   >
-                  <div class="mt-2"></div>
+                </div>
+              </div>
+              <div class="contact-box">
+                <div class="icon">
+                  <img src="assets/img/icons/footer-icon1.png" alt="" />
+                </div>
+                <div class="pera">
+                  <a href="tel:+31247810024">+31 247 810 024 </a>
+                </div>
+              </div>
+              <div class="contact-box">
+                <div class="icon">
+                  <img src="assets/img/icons/footer-icon3.png" alt="" />
+                </div>
+                <div class="pera">
                   <a target="_blank" href="https://www.google.com/maps/place/17+%C4%90.+S%E1%BB%91+19,+An+Ph%C3%BA,+Th%E1%BB%A7+%C4%90%E1%BB%A9c,+H%E1%BB%93+Ch%C3%AD+Minh/@10.7952228,106.7385587,14.54z/data=!4m6!3m5!1s0x3175260dfea09785:0x6bfa258fbd42506e!8m2!3d10.7974054!4d106.7414569!16s%2Fg%2F11fz95vc3b?entry=ttu&g_ep=EgoyMDI1MDQxNC4xIKXMDSoASAFQAw%3D%3D"
                     >Globalhire Group VN<br />
-                    số 17,Đường Số 19 Phường An Phú<br/> Quận 2, 700000 Hồ Chí Minh <br/>
+                    số 17,Đường Số 19 Phường An Phú<br/> Quận 2, TP. Hồ Chí Minh, Vietnam <br/>
                     Vietnam
                   </a>
+                </div>
+              </div>
+              <div class="contact-box">
+                <div class="icon">
+                  <img src="assets/img/icons/footer-icon1.png" alt="" />
+                </div>
+                <div class="pera">
+                  <a href="tel:+84816832325">+84 816 832 325 </a>
                 </div>
               </div>
             </div>
