--- a/service-details-hotel.html
+++ b/service-details-hotel.html
@@ -130,7 +130,7 @@
                     <option value="EN">English</option>
                     <option value="DU">Dutch</option>
                     <option value="GE">Germany</option>
-                    <option value="FE">French</option>
+                    <option value="FE">Vietnamese</option>
                   </select>
                 </div>
               </div>
@@ -762,44 +762,54 @@
                 </div>
               </div>
 
-              <div class="contact-box">
-                <div class="icon">
-                  <img src="assets/img/icons/footer-icon3.png" alt="" />
+              <div id="nl-address">
+                <div class="contact-box">
+                  <div class="icon">
+                    <img src="assets/img/icons/footer-icon3.png" alt="" />
+                  </div>
+                  <div class="pera">
+                    <a
+                      target="_blank"
+                      href="https://www.google.com/maps/place/Heyendaalseweg+203,+6525+SE+Nijmegen,+Netherlands/@51.777542,5.6909302,10.9z/data=!4m16!1m9!3m8!1s0x47c708e71cf260a7:0x7e39069c6a99705f!2sHeyendaalseweg+203,+6525+SE+Nijmegen,+Netherlands!3b1!8m2!3d51.8142869!4d5.8672531!10e5!16s%2Fg%2F11c5qgp4tb!3m5!1s0x47c708e71cf260a7:0x7e39069c6a99705f!8m2!3d51.8142869!4d5.8672531!16s%2Fg%2F11c5qgp4tb?entry=ttu&g_ep=EgoyMDI1MDQxNC4xIKXMDSoASAFQAw%3D%3D"
+                      >Globalhire Group NL
+                      <br />
+                      Heyendaalseweg 203 <br />
+                      6525 SE Nijmegen<br />
+                      Nederland</a
+                    >
+                  </div>
                 </div>
-                <div class="pera">
-                  <a target="_blank" href="https://www.google.com/maps/place/Heyendaalseweg+203,+6525+SE+Nijmegen,+Netherlands/@51.777542,5.6909302,10.9z/data=!4m16!1m9!3m8!1s0x47c708e71cf260a7:0x7e39069c6a99705f!2sHeyendaalseweg+203,+6525+SE+Nijmegen,+Netherlands!3b1!8m2!3d51.8142869!4d5.8672531!10e5!16s%2Fg%2F11c5qgp4tb!3m5!1s0x47c708e71cf260a7:0x7e39069c6a99705f!8m2!3d51.8142869!4d5.8672531!16s%2Fg%2F11c5qgp4tb?entry=ttu&g_ep=EgoyMDI1MDQxNC4xIKXMDSoASAFQAw%3D%3D"
-                    >Globalhire Group NL
-                    <br />
-                    Heyendaalseweg 203 <br /> 6525 SE Nijmegen<br/> Nederland</a
-                  >
-                </div>
-              </div>
-              <div class="contact-box">
-                <div class="icon">
-                  <img src="assets/img/icons/footer-icon1.png" alt="" />
-                </div>
-                <div class="pera">
-                  <a href="tel:+31247810024">+31 247 810 024 </a>
-                </div>
-              </div>
-              <div class="contact-box">
-                <div class="icon">
-                  <img src="assets/img/icons/footer-icon3.png" alt="" />
-                </div>
-                <div class="pera">
-                  <a target="_blank" href="https://www.google.com/maps/place/17+%C4%90.+S%E1%BB%91+19,+An+Ph%C3%BA,+Th%E1%BB%A7+%C4%90%E1%BB%A9c,+H%E1%BB%93+Ch%C3%AD+Minh/@10.7952228,106.7385587,14.54z/data=!4m6!3m5!1s0x3175260dfea09785:0x6bfa258fbd42506e!8m2!3d10.7974054!4d106.7414569!16s%2Fg%2F11fz95vc3b?entry=ttu&g_ep=EgoyMDI1MDQxNC4xIKXMDSoASAFQAw%3D%3D"
-                    >Globalhire Group VN<br />
-                    số 17,Đường Số 19 Phường An Phú<br/> Quận 2, TP. Hồ Chí Minh, Vietnam <br/>
-                    Vietnam
-                  </a>
+                <div class="contact-box">
+                  <div class="icon">
+                    <img src="assets/img/icons/footer-icon1.png" alt="" />
+                  </div>
+                  <div class="pera">
+                    <a href="tel:+31247810024">+31 247 810 024 </a>
+                  </div>
                 </div>
               </div>
-              <div class="contact-box">
-                <div class="icon">
-                  <img src="assets/img/icons/footer-icon1.png" alt="" />
+              <div id="vn-address">
+                <div class="contact-box">
+                  <div class="icon">
+                    <img src="assets/img/icons/footer-icon3.png" alt="" />
+                  </div>
+                  <div class="pera">
+                    <a
+                      target="_blank"
+                      href="https://www.google.com/maps/place/17+%C4%90.+S%E1%BB%91+19,+An+Ph%C3%BA,+Th%E1%BB%A7+%C4%90%E1%BB%A9c,+H%E1%BB%93+Ch%C3%AD+Minh/@10.7952228,106.7385587,14.54z/data=!4m6!3m5!1s0x3175260dfea09785:0x6bfa258fbd42506e!8m2!3d10.7974054!4d106.7414569!16s%2Fg%2F11fz95vc3b?entry=ttu&g_ep=EgoyMDI1MDQxNC4xIKXMDSoASAFQAw%3D%3D"
+                      >Globalhire Group VN<br />
+                      số 17,Đường Số 19 Phường An Phú<br />
+                      Quận 2, TP. Hồ Chí Minh, Vietnam <br />
+                    </a>
+                  </div>
                 </div>
-                <div class="pera">
-                  <a href="tel:+84816832325">+84 816 832 325 </a>
+                <div class="contact-box">
+                  <div class="icon">
+                    <img src="assets/img/icons/footer-icon1.png" alt="" />
+                  </div>
+                  <div class="pera">
+                    <a href="tel:+84816832325">+84 816 832 325 </a>
+                  </div>
                 </div>
               </div>
             </div>
