--- a/about.html
+++ b/about.html
@@ -155,7 +155,7 @@
             <option value="EN">🇺🇸</option>
             <option value="DU">🇳🇱</option>
             <option value="GE">🇩🇪</option>
-            <option value="FE">🇫🇷</option>
+            <option value="FE">🇻🇳</option>
           </select>
           <div class="mobile-nav-icon">
             <i class="fa-duotone fa-bars-staggered"></i>
