--- a/service-details-agriculture.html
+++ b/service-details-agriculture.html
@@ -159,7 +159,7 @@
                 <option value="EN">🇺🇸</option>
                 <option value="DU">🇳🇱</option>
                 <option value="GE">🇩🇪</option>
-                <option value="FE">🇫🇷</option>
+                <option value="FE">🇻🇳</option>
               </select>
               <div class="mobile-nav-icon">
                 <i class="fa-duotone fa-bars-staggered"></i>
