--- a/index.html
+++ b/index.html
@@ -1186,7 +1186,7 @@
                       <textarea
                         type="text"
                         placeholder="Questions"
-                        data-placeholder-key="questions"
+                        data-placeholder-key="question"
                         name="last_name"
                         required
                         rows="4"
