--- a/job-post.html
+++ b/job-post.html
@@ -280,8 +280,8 @@
 
     <div class="job-page sp">
       <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6">
+        <div class="row" id="job-list">
+          <!-- <div class="col-lg-4 col-md-6">
             <div class="job-post-box">
               <p class="tag" lang="lang-job-freelance">Freelance</p>
               <div class="job-owners-area">
@@ -289,16 +289,18 @@
                   <img src="assets/img/job-post/job-post-image1.png" alt="" />
                 </div>
                 <div class="text">
-                  <a href="#">CodeCraft Solutions</a>
-                  <p>Berlin, Germany</p>
+                  <a href="#">GlobalHire Clients</a>
+                  <p>Europe</p>
                 </div>
               </div>
               <div class="divider"></div>
               <div class="work-info">
-                <h5>Web Developer</h5>
-                <h6>€2200 / Month</h6>
+                <h5>Optical Fiber</h5>
+                <h6>Up-to €10.000 / Month</h6>
               </div>
-              <div class="button"></div>
+              <div class="button">
+                <a class="job-learn" href="job-details.html?jobId=123" lang="lang-job-view_detail">View Details <span><i class="fa-solid fa-arrow-right"></i></span></a>
+            </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
@@ -400,7 +402,7 @@
               </div>
               <div class="button"></div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
