--- a/service.html
+++ b/service.html
@@ -679,7 +679,7 @@
                 or a candidate seeking your next career opportunity,
               </p>
 
-              <div class="" data-aos="fade-right" data-aos-duration="800">
+              <!-- <div class="" data-aos="fade-right" data-aos-duration="800">
                 <div class="contact1-box">
                   <div class="icon">
                     <img src="assets/img/icons/contact-icon1.png" alt="" />
@@ -712,7 +712,7 @@
                     >
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
 
@@ -774,7 +774,7 @@
                       <textarea
                         type="text"
                         placeholder="Questions"
-                        data-placeholder-key="questions"
+                        data-placeholder-key="question"
                         name="last_name"
                         required
                         rows="4"
