--- a/about.html
+++ b/about.html
@@ -561,9 +561,9 @@
                   <div class="col-lg-6">
                     <div class="subscribe-area">
                       <form action="#" id="subscribe-form">
-                        <input type="email" placeholder="Email Address" />
+                        <input type="email" placeholder="Email" />
                         <div class="button">
-                          <button type="submit" id="submit-button" class="theme-btn1">
+                          <button lang="lang-home-subscribe" type="submit" id="submit-button" class="theme-btn1">
                             Subscribe Now
                             <span><i class="fa-solid fa-arrow-right"></i></span>
                           </button>
