--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Global Hire || About</title>
+     <title>Globalhire || About</title>
 
      <!--=====FAB ICON=======-->
      <link rel="shortcut icon" href="assets/img/logo/Logo.png" type="image/x-icon">
@@ -237,13 +237,7 @@
           <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
         </li>
         <li>
-          <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa-brands fa-youtube"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
         </li>
       </ul>
     </div>
@@ -456,7 +450,7 @@
                               <li><i class="fa-solid fa-star"></i></li>
                             </ul>
                             <div class="pera">
-                              <p>"Discover what our clients have to say about their experience with Global Hire. From small businesses to Fortune 500 companies, our tailored staffing solutions have left a lasting impact on organizations across industries. With a focus on excellence”</p>
+                              <p>"Discover what our clients have to say about their experience with Globalhire. From small businesses to Fortune 500 companies, our tailored staffing solutions have left a lasting impact on organizations across industries. With a focus on excellence”</p>
                             </div>
                           </div>
                           <div class="bottom-heading">
@@ -498,7 +492,7 @@
                       <li><i class="fa-solid fa-star"></i></li>
                     </ul>
                     <div class="pera">
-                      <p>"Discover what our clients have to say about their experience with Global Hire. From small businesses to Fortune 500 companies, our tailored staffing solutions have left a lasting impact on organizations across industries. With a focus on excellence”</p>
+                      <p>"Discover what our clients have to say about their experience with Globalhire. From small businesses to Fortune 500 companies, our tailored staffing solutions have left a lasting impact on organizations across industries. With a focus on excellence”</p>
                     </div>
                   </div>
                   <div class="bottom-heading">
