--- a/job-details.html
+++ b/job-details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Global Hire - Job Details</title>
+    <title>Globalhire || Job Details</title>
 
     <!--=====FAB ICON=======-->
     <link
@@ -242,13 +242,7 @@
               <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
             </li>
           </ul>
         </div>
@@ -399,13 +393,10 @@
                   <ul>
                     <li class="text" lang="lang-job-we_on">We Are On:</li>
                     <li>
-                      <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                    </li>
-                    <li>
                       <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                      <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                     </li>
                   </ul>
                 </div>
@@ -429,6 +420,10 @@
                 <a href="tel:+84816832325" class="call-btn"
                   ><img src="assets/img/icons/details-call.png" alt="" /> +84 816 832 325</a
                 >
+                <div class="space10"></div>
+                <a href="tel:+31247810024" class="call-btn"
+                ><img src="assets/img/icons/details-call.png" alt="" /> +31 247 810 024</a
+              >
               </div>
             </div>
           </div>
@@ -504,13 +499,7 @@
                   <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 </li>
               </ul>
             </div>
