--- a/service-details-hotel.html
+++ b/service-details-hotel.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Global Hire || Service Details</title>
+    <title>Globalhire || Service Details</title>
 
     <!--=====FAB ICON=======-->
     <link
@@ -241,13 +241,7 @@
               <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-brands fa-youtube"></i></a>
-            </li>
-            <li>
-              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
             </li>
           </ul>
         </div>
