--- a/index.html
+++ b/index.html
@@ -762,18 +762,6 @@
       </div>
     </div>
 
-    <!--=====SERVICE AREA END=======-->
-
-    <!--=====PROJECT AREA START=======-->
-
-    <!--=====PROJECT AREA END=======-->
-
-    <!--=====PROJECT AREA START=======-->
-
-    <!--=====PROJECT AREA END=======-->
-
-    <!--=====WORK AREA START=======-->
-
     <!-- <div class="work1 sp">
       <div class="container">
         <div class="row align-items-center">
@@ -1224,47 +1212,6 @@
 
     <!--=====CONTACT AREA END=======-->
 
-    <!--===== CTA AREA START =======-->
-
-    <!-- <div class="cta">
-      <div class="container">
-        <div class="row cta-border align-items-center">
-          <div class="col-lg-6">
-            <div class="heading1-w">
-              <h2 lang="lang-home-ready_to_power">
-                Ready to Power up your Savings and Reliability?
-              </h2>
-              <div class="space16"></div>
-              <p lang="lang-home-cta_description">
-                Feel free to customize this paragraph to better reflect the
-                specific services offered by your IT solution & the unique
-              </p>
-            </div>
-          </div>
-
-          <div class="col-lg-6">
-            <div class="subscribe-area">
-              <form action="#">
-                <input type="email" placeholder="Email Address" />
-                <div class="button">
-                  <button
-                    type="submit"
-                    class="theme-btn1"
-                    lang="lang-home-subscribe"
-                  >
-                    Subscribe Now
-                    <span><i class="fa-solid fa-arrow-right"></i></span>
-                  </button>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-    <!--===== CTA AREA START =======-->
-
     <!--===== FOOTER AREA START =======-->
 
     <div class="footer1 _relative">
@@ -1289,13 +1236,7 @@
                   <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 </li>
               </ul>
             </div>
