--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 
     <!--=====HERO SLIDER AREA END=======-->
 
-    <div class="hero1-slider">
+    <!-- <div class="hero1-slider">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -451,32 +451,11 @@
               <div class="single-slider">
                 <img src="assets/img/logo/slider-logo7.png" alt="" />
               </div>
-              <div class="single-slider">
-                <img src="assets/img/logo/slider-logo1.png" alt="" />
-              </div>
-              <div class="single-slider">
-                <img src="assets/img/logo/slider-logo2.png" alt="" />
-              </div>
-              <div class="single-slider">
-                <img src="assets/img/logo/slider-logo3.png" alt="" />
-              </div>
-              <div class="single-slider">
-                <img src="assets/img/logo/slider-logo4.png" alt="" />
-              </div>
-              <div class="single-slider">
-                <img src="assets/img/logo/slider-logo5.png" alt="" />
-              </div>
-              <div class="single-slider">
-                <img src="assets/img/logo/slider-logo6.png" alt="" />
-              </div>
-              <div class="single-slider">
-                <img src="assets/img/logo/slider-logo7.png" alt="" />
-              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!--=====HERO SLIDER AREA END=======-->
 
