--- a/service.html
+++ b/service.html
@@ -109,27 +109,6 @@
                         </li>
                         <li>
                           <a
-                            href="service-details-agriculture.html"
-                            lang="lang-service-agriculture_title"
-                            >Job Details</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            href="service-details-worker.html"
-                            lang="lang-service-production_title"
-                            >Job Post</a
-                          >
-                        </li>
-                        <li>
-                          <a
-                            href="service-details-transport.html"
-                            lang="lang-service-transport_title"
-                            >Job Details</a
-                          >
-                        </li>
-                        <li>
-                          <a
                             href="service-details-fiber.html"
                             lang="lang-service-fiber_title"
                             >Fiber</a
@@ -245,27 +224,6 @@
                   href="service-details-hotel.html"
                   lang="lang-service-hotel_title"
                   >Job Post</a
-                >
-              </li>
-              <li>
-                <a
-                  href="service-details-agriculture.html"
-                  lang="lang-service-agriculture_title"
-                  >Job Details</a
-                >
-              </li>
-              <li>
-                <a
-                  href="service-details-worker.html"
-                  lang="lang-service-production_title"
-                  >Job Post</a
-                >
-              </li>
-              <li>
-                <a
-                  href="service-details-transport.html"
-                  lang="lang-service-transport_title"
-                  >Job Details</a
                 >
               </li>
               <li>
@@ -520,7 +478,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 col-md-6">
+          <!-- <div class="col-lg-6 col-md-6">
             <div class="service1-box active">
               <div class="image overlay-anim">
                 <a href="service-details-transport.html">
@@ -608,7 +566,7 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col-lg-6 col-md-6">
             <div class="service1-box active">
               <div class="image overlay-anim">
@@ -623,7 +581,7 @@
                       lang="lang-service-fiber_title"
                       class="text-white font-bold"
                     >
-                      Agriculture
+                      Fiber
                     </h4>
                     <div class="space16"></div>
                     <p
@@ -646,7 +604,7 @@
     <!--=====SERVICE AREA END=======-->
 
     <!--===== CTA AREA START =======-->
-
+    <div class="space30"></div>
     <div class="contact1 sp">
       <div class="container">
         <div class="row align-items-center">
