--- a/service-details-IT.html
+++ b/service-details-IT.html
@@ -88,9 +88,6 @@
                         <li><a href="service-details-IT.html" lang="lang-service-it_title">Job Post</a></li>
                         <li><a href="service-details-construction.html" lang="lang-service-construction_title">Job Details</a></li>
                         <li><a href="service-details-hotel.html" lang="lang-service-hotel_title">Job Post</a></li>
-                        <li><a href="service-details-agriculture.html" lang="lang-service-agriculture_title">Job Details</a></li>
-                        <li><a href="service-details-worker.html" lang="lang-service-production_title">Job Post</a></li>
-                        <li><a href="service-details-transport.html" lang="lang-service-transport_title">Job Details</a></li>
                         <li><a href="service-details-fiber.html" lang="lang-service-fiber_title">Fiber</a></li>
                        </ul>
                     </li>
@@ -188,9 +185,6 @@
               <li><a href="service-details-IT.html" lang="lang-service-it_title">Job Post</a></li>
               <li><a href="service-details-construction.html" lang="lang-service-construction_title">Job Details</a></li>
               <li><a href="service-details-hotel.html" lang="lang-service-hotel_title">Job Post</a></li>
-              <li><a href="service-details-agriculture.html" lang="lang-service-agriculture_title">Job Details</a></li>
-              <li><a href="service-details-worker.html" lang="lang-service-production_title">Job Post</a></li>
-              <li><a href="service-details-transport.html" lang="lang-service-transport_title">Job Details</a></li>
               <li><a href="service-details-fiber.html" lang="lang-service-fiber_title">Fiber</a></li>
           </ul>
           </li>
@@ -467,33 +461,9 @@
                   </li>
                   <li>
                     <a
-                      href="service-details-transport.html"
-                      lang="lang-service-transport_title"
-                      >Transport<span
-                        ><i class="fa-regular fa-arrow-right"></i></span
-                    ></a>
-                  </li>
-                  <li>
-                    <a
-                      href="service-details-worker.html"
-                      lang="lang-service-production_title"
-                      >Production Workers<span
-                        ><i class="fa-regular fa-arrow-right"></i></span
-                    ></a>
-                  </li>
-                  <li>
-                    <a
-                      href="service-details-agriculture.html"
-                      lang="lang-service-agriculture_title"
-                      >Agriculture<span
-                        ><i class="fa-regular fa-arrow-right"></i></span
-                    ></a>
-                  </li>
-                  <li>
-                    <a
                       href="service-details-fiber.html"
                       lang="lang-service-fiber_title"
-                      >Agriculture<span
+                      >Fiber<span
                         ><i class="fa-regular fa-arrow-right"></i></span
                     ></a>
                   </li>
@@ -517,13 +487,7 @@
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                  </li>
-                  <li>
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
                   </li>
                 </ul>
               </div>
@@ -551,23 +515,23 @@
           <div class="col-lg-4 col-md-6">
             <div class="service1-box active">
               <div class="image overlay-anim">
-                <a href="service-details-transport.html">
-                  <img src="assets/img/images/service4.png" alt="" />
+                <a href="service-details-fiber.html">
+                  <img src="assets/img/images/service7.png" alt="" />
                 </a>
               </div>
               <div class="hover-area">
-                <a href="service-details-transport.html">
+                <a href="service-details-fiber.html">
                   <div class="heading1-w">
                     <h4
-                      lang="lang-service-transport_title"
+                      lang="lang-service-fiber_title"
                       class="text-white font-bold"
                     >
-                      Transport
+                      Fiber
                     </h4>
                     <div class="space16"></div>
                     <p
                       style="font-size: 16px"
-                      lang="lang-service-transport_description"
+                      lang="lang-service-fiber_description"
                     >
                       Looking for drivers or logistics support? We offer
                       qualified transport staff who value safety, punctuality,
