--- a/service-details-worker.html
+++ b/service-details-worker.html
@@ -188,9 +188,6 @@
               <li><a href="service-details-IT.html" lang="lang-service-it_title">Job Post</a></li>
               <li><a href="service-details-construction.html" lang="lang-service-construction_title">Job Details</a></li>
               <li><a href="service-details-hotel.html" lang="lang-service-hotel_title">Job Post</a></li>
-              <li><a href="service-details-agriculture.html" lang="lang-service-agriculture_title">Job Details</a></li>
-              <li><a href="service-details-worker.html" lang="lang-service-production_title">Job Post</a></li>
-              <li><a href="service-details-transport.html" lang="lang-service-transport_title">Job Details</a></li>
               <li><a href="service-details-fiber.html" lang="lang-service-fiber_title">Fiber</a></li>
           </ul>
           </li>
@@ -466,33 +463,9 @@
                   </li>
                   <li>
                     <a
-                      href="service-details-transport.html"
-                      lang="lang-service-transport_title"
-                      >Transport<span
-                        ><i class="fa-regular fa-arrow-right"></i></span
-                    ></a>
-                  </li>
-                  <li>
-                    <a
-                      href="service-details-worker.html"
-                      lang="lang-service-production_title"
-                      >Production Workers<span
-                        ><i class="fa-regular fa-arrow-right"></i></span
-                    ></a>
-                  </li>
-                  <li>
-                    <a
-                      href="service-details-agriculture.html"
-                      lang="lang-service-agriculture_title"
-                      >Agriculture<span
-                        ><i class="fa-regular fa-arrow-right"></i></span
-                    ></a>
-                  </li>
-                  <li>
-                    <a
                       href="service-details-fiber.html"
                       lang="lang-service-fiber_title"
-                      >Agriculture<span
+                      >Fiber<span
                         ><i class="fa-regular fa-arrow-right"></i></span
                     ></a>
                   </li>
@@ -516,13 +489,7 @@
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                  </li>
-                  <li>
                     <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                  </li>
-                  <li>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
                   </li>
                 </ul>
               </div>
