--- a/service-details-transport.html
+++ b/service-details-transport.html
@@ -87,7 +87,7 @@
                       <ul>
                         <li><a href="service-details-IT.html" lang="lang-service-it_title">Job Post</a></li>
                         <li><a href="service-details-construction.html" lang="lang-service-construction_title">Job Details</a></li>
-                        <li><a href="service-details-hotel.html" lang="lang-service-hotel_title">Job Post</a></li>
+                        <li><a href="service-details-hotel.html" lang="lang-service-hospitality_title">Job Post</a></li>
                         <li><a href="service-details-fiber.html" lang="lang-service-fiber_title">Fiber</a></li>
                        </ul>
                     </li>
@@ -184,7 +184,7 @@
             <ul class="sub-menu">
               <li><a href="service-details-IT.html" lang="lang-service-it_title">Job Post</a></li>
               <li><a href="service-details-construction.html" lang="lang-service-construction_title">Job Details</a></li>
-              <li><a href="service-details-hotel.html" lang="lang-service-hotel_title">Job Post</a></li>
+              <li><a href="service-details-hotel.html" lang="lang-service-hospitality_title">Job Post</a></li>
               <li><a href="service-details-fiber.html" lang="lang-service-fiber_title">Fiber</a></li>
           </ul>
           </li>
@@ -451,7 +451,7 @@
                   <li>
                     <a
                       href="service-details-hotel.html"
-                      lang="lang-service-hotel_title"
+                      lang="lang-service-hospitality_title"
                       >Hotel Staff<span
                         ><i class="fa-regular fa-arrow-right"></i></span
                     ></a>
@@ -520,23 +520,26 @@
           <div class="col-lg-4 col-md-6">
             <div class="service1-box active">
               <div class="image overlay-anim">
-                <a href="service-details-agriculture.html">
-                  <img src="assets/img/images/service6.jpg" alt="" />
-                </a>
+                <a href="service-details-IT.html" class="d-block h-100 w-100"
+                  ><img src="assets/img/images/service1.png" alt=""
+                /></a>
               </div>
               <div class="hover-area">
-                <a href="#">
+                <a href="service-details-IT.html">
                   <div class="heading1-w">
-                    <h4 lang="lang-service-agriculture_title" class="text-white font-bold">Agriculture
+                    <h4
+                      lang="lang-service-it_title"
+                      class="text-white font-bold"
+                    >
+                      IT Professionals
                     </h4>
                     <div class="space16"></div>
                     <p
                       style="font-size: 16px"
-                      lang="lang-service-agriculture_description"
+                      lang="lang-service-it_subtitle"
                     >
-                      Vietnam is known for its strong agricultural workforce. We
-                      provide reliable and hard-working personnel for farming,
-                      harvesting, greenhouse work.
+                      Our IT professionals are ready to deploy, bringing the
+                      technical skills your projects require.
                     </p>
                   </div>
                 </a>
@@ -563,7 +566,7 @@
                     <div class="space16"></div>
                     <p
                       style="font-size: 16px"
-                      lang="lang-service-construction_description"
+                      lang="lang-service-construction_subtitle"
                     >
                       We supply skilled workers for construction and
                       infrastructure, with hands-on experience and the right
@@ -587,14 +590,14 @@
                   <div class="heading1-w">
                     <h4
                       class="text-white font-bold"
-                      lang="lang-service-hotel_title"
+                      lang="lang-service-hospitality_title"
                     >
                       Horeca
                     </h4>
                     <div class="space16"></div>
                     <p
                       style="font-size: 16px"
-                      lang="lang-service-hotel_description"
+                      lang="lang-service-hospitality_subtitle"
                     >
                       Hospitality is an art.We select hotel staff with
                       experience, professionalism, and a warm presence
