--- a/service-details-transport.html
+++ b/service-details-transport.html
@@ -674,13 +674,7 @@
                   <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa-brands fa-youtube"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                 </li>
               </ul>
             </div>
@@ -733,8 +727,7 @@
                       >Globalhire Group NL
                       <br />
                       Heyendaalseweg 203 <br />
-                      6525 SE Nijmegen<br />
-                      Nederland</a
+                      6525 SE Nijmegen Nederland</a
                     >
                   </div>
                 </div>
