--- a/index.html
+++ b/index.html
@@ -1226,8 +1226,7 @@
                       >Globalhire Group NL
                       <br />
                       Heyendaalseweg 203 <br />
-                      6525 SE Nijmegen<br />
-                      Nederland</a
+                      6525 SE Nijmegen Nederland</a
                     >
                   </div>
                 </div>
