--- a/job-details.html
+++ b/job-details.html
@@ -362,6 +362,11 @@
                       <ul>
                       </ul>
                     </div>
+                    <div class="mt-2"><b lang="lang-job-nice_to_have">Nice to have</b></div>
+                    <div class="job-detials-list job-details-nice-to-have">
+                      <ul>
+                      </ul>
+                    </div>
                   </div>
                 </div>
               </article>
@@ -381,7 +386,22 @@
                   </div>
                 </div>
               </article>
-
+              <div class="space40"></div>
+              <article>
+                <div class="job-single-post">
+                  <div class="heading1">
+                    <h3 lang="lang-job-process">Application Process</h3>
+                    <div class="space16"></div>
+                    <p>
+                    </p>
+                    <div class="job-detials-list job-details-process">
+                      <div class="space10"></div>
+                      <ul>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </article>
               <div class="social-area">
                 <div class="icons">
                   <ul>
@@ -541,14 +561,13 @@
                   </div>
                   <div class="pera">
                     <a
-                      target="_blank"
-                      href="https://www.google.com/maps/place/Heyendaalseweg+203,+6525+SE+Nijmegen,+Netherlands/@51.777542,5.6909302,10.9z/data=!4m16!1m9!3m8!1s0x47c708e71cf260a7:0x7e39069c6a99705f!2sHeyendaalseweg+203,+6525+SE+Nijmegen,+Netherlands!3b1!8m2!3d51.8142869!4d5.8672531!10e5!16s%2Fg%2F11c5qgp4tb!3m5!1s0x47c708e71cf260a7:0x7e39069c6a99705f!8m2!3d51.8142869!4d5.8672531!16s%2Fg%2F11c5qgp4tb?entry=ttu&g_ep=EgoyMDI1MDQxNC4xIKXMDSoASAFQAw%3D%3D"
-                      >Globalhire Group NL
-                      <br />
-                      Heyendaalseweg 203 <br />
-                      6525 SE Nijmegen<br />
-                      Nederland</a
-                    >
+                    target="_blank"
+                    href="https://www.google.com/maps/place/Heyendaalseweg+203,+6525+SE+Nijmegen,+Netherlands/@51.777542,5.6909302,10.9z/data=!4m16!1m9!3m8!1s0x47c708e71cf260a7:0x7e39069c6a99705f!2sHeyendaalseweg+203,+6525+SE+Nijmegen,+Netherlands!3b1!8m2!3d51.8142869!4d5.8672531!10e5!16s%2Fg%2F11c5qgp4tb!3m5!1s0x47c708e71cf260a7:0x7e39069c6a99705f!8m2!3d51.8142869!4d5.8672531!16s%2Fg%2F11c5qgp4tb?entry=ttu&g_ep=EgoyMDI1MDQxNC4xIKXMDSoASAFQAw%3D%3D"
+                    >Globalhire Group NL
+                    <br />
+                    Heyendaalseweg 203 <br />
+                    6525 SE Nijmegen Nederland</a
+                  >
                   </div>
                 </div>
                 <div class="contact-box">
