--- a/job-details.html
+++ b/job-details.html
@@ -214,7 +214,7 @@
             <div class="pera">
               <a href="tel:+31247810024">+31 247 810 024 (NL)</a> 
               <br />
-              <a href="tel:+84816832325">+84 816 832 325 (VN) </a>
+              <a href="tel:+842888899990">+84 288 889 9990 (VN) </a>
             </div>
           </div>
     
@@ -236,7 +236,7 @@
               <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+              <a href="https://www.facebook.com/share/19AguehSoU/?mibextid=wwXIfr"><i class="fa-brands fa-linkedin-in"></i></a>
             </li>
           </ul>
         </div>
@@ -407,7 +407,7 @@
                   <ul>
                     <li class="text" lang="lang-job-we_on">We Are On:</li>
                     <li>
-                      <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                      <a href="https://www.facebook.com/share/19AguehSoU/?mibextid=wwXIfr"><i class="fa-brands fa-linkedin-in"></i></a>
                     </li>
                     <li>
                       <a href="#"><i class="fa-brands fa-linkedin"></i></a>
@@ -431,8 +431,8 @@
               <div class="_job_widget _call-btn mt-40">
                 <h3 lang="lang-job-need_contact">If You Need Any Help Contact With Us</h3>
                 <div class="space10"></div>
-                <a href="tel:+84816832325" class="call-btn"
-                  ><img src="assets/img/icons/details-call.png" alt="" /> +84 816 832 325</a
+                <a href="tel:+842888899990" class="call-btn"
+                  ><img src="assets/img/icons/details-call.png" alt="" /> +84 288 889 9990</a
                 >
                 <div class="space10"></div>
                 <a href="tel:+31247810024" class="call-btn"
@@ -513,7 +513,7 @@
                   <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                  <a href="https://www.facebook.com/share/19AguehSoU/?mibextid=wwXIfr"><i class="fa-brands fa-linkedin-in"></i></a>
                 </li>
               </ul>
             </div>
@@ -599,7 +599,7 @@
                     <img src="assets/img/icons/footer-icon1.png" alt="" />
                   </div>
                   <div class="pera">
-                    <a href="tel:+84816832325">+84 816 832 325 </a>
+                    <a href="tel:+842888899990">+84 288 889 9990 </a>
                   </div>
                 </div>
               </div>
